# makarios

./: .gitignore  Classes  LICENSE  Makefile  README.md  Untitled Diagram.drawio  digital_image.py  django teleios  main.py  preguntas  pyproject.toml
kritis/: __init__.py  routes.py  utils.py
kritis/templates/: index.html
teleios/: db.sqlite3  manage.py
teleios/img_mngr/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
teleios/img_mngr/migrations/: 0001_initial.py
teleios/img_mngr/templates/img_mngr/: base.html  home.html  navbar.html
teleios/teleios/: asgi.py  settings.py  urls.py  wsgi.py
test/: conftest.py  test_app_index.py
